2.1.2
	Missing SPF 2 bit (Hajimu UMEMOTO)
2.1.1
	Bucketed in-memory databases for better concurency (Ranko Zivojnovic)
	Large buffer for writing the dump file (Ranko Zivojnovic) 
	Option to disable human-readable date in dumps (Ranko Zivojnovic)
	Check for MXsync sends (Ranko Zivojnovic) 
	Better handle non fatal I/O errors in MXsync (Ranko Zivojnovic)
	Fix ACCESSDB whitelist with multiple recipients (Alexander Lobodzinski)
	DRAC support (Romain Kang)
	Log hostname as well as IP in ACL debug (Alexey Popov)
	Record HELO for SPF 2 (Hajimu UMEMOTO)
2.0.2:
	Fix memory leak within MX sync code (Hajimu UMEMOTO)
2.0.1:
	correctly update autowhitelist when subnetmask is used (Attila Bruncsak)
	Fix deadlock in autowhitelisting code (Attila Bruncsak)
	Avoid using inet_makeaddr because it breaks on IRIX (Pavel Cahyna)
	Check if -D_SGI_SOURCE is needed on IRIX
	Document ABI problems on IRIX (Pavel Cahyna)
	Remove reload by SIGHUP in rc-debian.sh (Pavel Cahyna)
	Add support for newer libspf2 (Hajimu UMEMOTO)
2.0:
2.0rc5:
	Fix suffix match for the domain clause (Martin Paul)
2.0rc4:
	Perform suffix match for the domain clause (Martin Paul)
	Documentation fixes (Martin Paul)
2.0rc3:
	Missing options in usage (Martin Paul)
	SPF build fix
2.0rc2:
	Bug fix in address comparison code	
2.0rc1:
	README table of content
	README spell check (Martin Paul)
	Fix memory leak (Hajimu Umemoto)
	dependency in .spec file: sendmail 8.11 only is required
2.0b7:
	Split installation targets (Elrond)
	nroff man pages (Fredrik Pettai & Martin Paul)
	Updated contributors list in man pages
2.0b6:
	Fix timing bug for messages arriving on greylist timeout (Martin Paul)
	Install formatted man page that can be displayed on Solaris
2.0b5:
	Missing bits from the 2.0b4 fix
2.0b4:
	Fix MX sync bug on Solaris, shut up warnings at build time
2.0b3:
	Add extendedregex option for using extended regex (Matt Kettler)
	Updated .spec file for running without root privs (Ivan F. Martinez)