@@ -1,7 +1,7 @@
 #
 # Greylisting config file
 #
-# $Id: greylist.conf,v 1.32 2006/01/08 00:38:25 manu Exp $
+# $Id: greylist.conf,v 1.33 2006/01/11 06:40:39 manu Exp $
 #
 
 # Uncomment this to enable debug output.
@@ -26,6 +26,10 @@
 #syncaddr 192.0.2.2 port 9785
 #syncaddr 2001:db8::1:c3b5:123
 #syncaddr 2001:db8::1:c3b5:123 port 1234
+
+# Specific IP-Address for outbound sync-connections
+# between MXs. If blank, system selects an ip.
+# syncsrcaddr 123.45.678.9
 
 # Greylisting your own MTA is a very bad idea: never
 # comment this line, except for testing purposes.
